<resources>
    <string name="app_name">The Wonderful World Of Football</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">List Clubs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">My Profile</string>
    <string name="title_detail_club">More Details About The Club</string>
    <string name="image_description">Football is The Most Beautiful Thing</string>
    <string name="welcome_message">Hey there, please welcome to my information about the football club application!</string>
    <string name="description">I have developed this application to present you with the information about football club.
                Venture out as much as you like and embrace the magic, you can reach them by going to the center of the navigation below
                on the “list clubs” section, have a great experience!</string>
    <string name="go_to_linkedin">GO TO MY LINKEDIN</string>
    <string name="go_to_instagram">GO TO MY INSTAGRAM</string>
    <string name="fullname_placeholder">Elvizto Juan Khresnanda</string>
    <string name="nim_placeholder">L0122054</string>
    <string name="major_year_placeholder">Informatics, Batch 2022</string>
    <string name="faculty_placeholder">Faculty of Information Technology and Data Science</string>
    <string name="university_placeholder">Sebelas Maret University</string>
    <string name="email_placeholder">elvizto.juan.k@gmail.com\nelvizto.jujuworld@student.uns.ac.id</string>
    <string name="description_title">- About Me -</string>
    <string name="description_placeholder">Hii there! let me introduce myself, my name is Elvizto Juan Khresnanda, or called as EL as my friends usually call it.
                I am a person who is very passionate and ambitious in terms of improving myself in whatever conditions and wherever I am.
                Many people call me a Social Butterfly, yeah I think it is truly true, aka I really like socializing with people,
                joking with them, making unforgettable moments with the people, or just meeting and talking about life.</string>
    <string name="welcome_placeholder">Hello there! click the button below to get to know more about me!</string>
    <string name="share_button">SHARE MY PROFILE!</string>
    <string name="league_name">League</string>
    <string name="club_name">Football Club</string>
    <string name="description_club">About Briefly</string>
    <string name="club_button">Visit The Official Website</string>
    <string-array name="club_websites">
        <item>https://www.manutd.com/</item>
        <item>https://www.liverpoolfc.com/</item>
        <item>https://www.chelseafc.com/en</item>
        <item>https://www.arsenal.com/</item>
        <item>https://www.fcbarcelona.com/en/</item>
        <item>https://www.realmadrid.com/en-US</item>
        <item>https://en.atleticodemadrid.com/</item>
        <item>https://www.athletic-club.eus/en/</item>
        <item>https://www.acmilan.com/en</item>
        <item>https://www.juventus.com/id/</item>
        <item>https://www.inter.it/en</item>
        <item>https://www.asroma.com/en</item>
        <item>https://fcbayern.com/en</item>
        <item>https://www.bvb.de/eng</item>
        <item>https://rbleipzig.com/en/</item>
        <item>https://www.bayer04.de/en-us</item>
        <item>https://id.psg.fr/</item>
        <item>https://www.om.fr/en</item>
        <item>https://www.ol.fr/en</item>
        <item>https://www.losc.fr/</item>
    </string-array>
    <string-array name="leagues">
        <item>English Premier League</item>
        <item>La Liga</item>
        <item>Serie A</item>
        <item>Bundesliga</item>
        <item>Ligue 1 France</item>
    </string-array>
    <string-array name="data_name">
        <item>Manchester United</item>
        <item>Liverpool</item>
        <item>Chelsea</item>
        <item>Arsenal</item>
        <item>FC Barcelona</item>
        <item>Real Madrid</item>
        <item>Atletico de Madrid</item>
        <item>Athletic Bilbao</item>
        <item>AC Milan</item>
        <item>Juventus</item>
        <item>Inter Milan</item>
        <item>AS Roma</item>
        <item>Bayern Munchen</item>
        <item>Borussia Dortmund</item>
        <item>RB Leipzig</item>
        <item>Bayer 04 Leverkusen</item>
        <item>Paris Saint Germain</item>
        <item>Marseille</item>
        <item>Lyon</item>
        <item>Lille</item>
    </string-array>
</resources>