<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:padding="5dp"
    android:background="?attr/profileBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.profile.ProfileFragment">

<!--        <TextView-->
<!--            android:id="@+id/text_profile"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="20sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" >-->
<!--        </TextView>-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:src="@drawable/elviztoprofile"
        style="@style/BorderColor"
        app:civ_border_width="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

        <!-- LinearLayout untuk textFullName hingga textEmail -->
        <LinearLayout
            android:id="@+id/profileInfoContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bgtext_shape"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textFullName"
                android:text="@string/fullname_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textNim"
                android:text="@string/nim_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="16sp"
                android:layout_marginTop="13dp"/>

            <TextView
                android:id="@+id/textMajorYear"
                android:text="@string/major_year_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="16sp"
                android:layout_marginTop="13dp"/>

            <TextView
                android:id="@+id/textFaculty"
                android:text="@string/faculty_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="15sp"
                android:layout_marginTop="13dp"/>

            <TextView
                android:id="@+id/textUniversity"
                android:text="@string/university_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="16sp"
                android:layout_marginTop="13dp"/>

            <TextView
                android:id="@+id/textEmail"
                android:text="@string/email_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="16sp"
                android:layout_marginTop="13dp"/>
        </LinearLayout>

        <!-- LinearLayout untuk textDescriptionTitle dan textDescriptionContent -->
        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bgtext_shape"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/profileInfoContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textDescriptionTitle"
                android:text="@string/description_title"
                style="@style/AppTextAppearance"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textDescriptionContent"
                android:text="@string/description_placeholder"
                style="@style/AppTextAppearance"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:fontFamily="casual"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    <Button
        android:id="@+id/buttonShare"
        style="@style/AppButtonStyle"
        android:layout_marginTop="20dp"
        android:text="@string/share_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionContainer"
        tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>