<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:background="@drawable/football_bg12"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

        <!-- Underline for the title -->
        <View
            android:id="@+id/titleUpperline"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?attr/colorSecondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/app_name"
        style="@style/AppTextAppearance"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/titleUpperline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

        <!-- Underline for the title -->
        <View
            android:id="@+id/titleUnderline"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageHeader"
        android:layout_width="225dp"
        android:layout_height="225dp"
        app:civ_border_width="1dp"
        android:src="@drawable/football3"
        style="@style/BorderColor"
        app:layout_constraintTop_toBottomOf="@id/titleUnderline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:text="@string/welcome_message"
        style="@style/AppTextAppearance"
        android:textSize="23sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/imageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:text="@string/description"
        style="@style/AppTextAppearance"
        android:textSize="17sp"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:justificationMode="inter_word"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonGoToLinkedIn"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppButtonStyle"
        android:layout_marginTop="12dp"
        android:text="@string/go_to_linkedin" />

    <Button
        android:id="@+id/buttonGoToInstagram"
        app:layout_constraintTop_toBottomOf="@id/buttonGoToLinkedIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppButtonStyle"
        android:layout_marginTop="10dp"
        android:text="@string/go_to_instagram"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>