<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Tambahkan LinearLayout untuk sub-judul liga -->
    <LinearLayout
        android:id="@+id/ll_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/hotBlue"
            android:text="@string/league_name" />
    </LinearLayout>

    <!-- CardView untuk klub -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/football_bgcard"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/hotWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_item_photo"
                app:layout_constraintTop_toTopOf="@id/img_item_photo"
                tools:text="@string/club_name" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="5"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/hotWhite"
                app:layout_constraintBottom_toBottomOf="@id/img_item_photo"
                app:layout_constraintEnd_toEndOf="@id/tv_item_name"
                app:layout_constraintStart_toStartOf="@id/tv_item_name"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/description_club" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>